# schoolware_api_tools

./: README  pyproject.toml  setup.py
schoolware_api_tools/: __init__.py  schoolware_api_tools.py
schoolware_api_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
workflows/: upload.yaml
