[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schoolware_api_tools"
version = "0.0.0"
authors = [
  { name="MB", email="schoolware_api@mb-server.com" },
]
description = "some tools for schoolware api made in python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'schoolware_api>=1.10.0',
]
[project.urls]
"Homepage" = "https://github.com/Maarten-buelens/schoolware_api_tools"
"Bug Tracker" = "https://github.com/Maarten-buelens/schoolware_api_tools/issues"
